Entity Materials Fix, Transform Wrapping
Added wrap function to utilities. Fixed materials errors which prevented an entity from displaying multiple curves/meshes with different materials. Added instancing example.